--- a/README.Rmd
+++ b/README.Rmd
@@ -18,14 +18,15 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of hw04phayleymanke10 is to ...
+The goal of hw04phayleymanke10 is to perform 2 different functions. 
 
 ## Installation
 
-This package is only available by permission of the author at:
+This package is only available by permission of the author, Hayley Manke, at:
 
 install.packages("../hw04phayleymanke10")
 
+GitHub ID: hayleymanke10
 
 ## Example
 
@@ -36,18 +37,4 @@ library(hw04phayleymanke10)
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
